<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Toolbar -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/biruLain"
        android:padding="15px"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="113dp"
                    app:srcCompat="@drawable/user4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Nama"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font18" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/NIM"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font12" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15px">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/UPH"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font12" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Fakultas"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font12" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Tahun"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15px">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Medan"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font12" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Jurusan"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font12" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Semester"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:layout_margin="15px"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/Profil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/biruTua"
                    android:onClick="openProfileActivityProfil"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/SEP"
                        android:textColor="@color/kuning"
                        android:textSize="@dimen/font18" />

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/SEPanjang"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font18" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15px"
                android:background="@color/biruTua"
                android:onClick="openProfileActivityTodo"
                android:orientation="horizontal"
                android:padding="15px">

                <LinearLayout
                    android:id="@+id/Ubahprofil"
                    android:layout_width="334dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/Profil1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Profil"
                        android:textColor="@color/kuning"
                        android:textSize="@dimen/font18" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/Ubah"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font18" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
